# databricks-hackathon-ie

./: .gitignore
.codex/agents/: theoretical-judge.toml
affordability-friction-planner/: README.md  project-scope.md  task-split.md
affordability-friction-planner/app/: .env.example  README.md  app.yaml  app.yaml.tmpl  appkit.plugins.json  databricks.yml  package-lock.json  package.json
affordability-friction-planner/app/client/: index.html  vite.config.ts
affordability-friction-planner/app/client/public/: site.webmanifest.tmpl
affordability-friction-planner/app/server/: server.ts
affordability-friction-planner/app/tests/: smoke.spec.ts
affordability-friction-planner/modeling/: README.md  score-spec.md
affordability-friction-planner/pipeline/: README.md  databricks.yml  pyproject.toml
affordability-friction-planner/pipeline/resources/: affordability_friction_planner_etl.pipeline.yml
affordability-friction-planner/pipeline/src/affordability_friction_planner_etl/: __init__.py  osm.py  shared.py
affordability-friction-planner/pipeline/src/affordability_friction_planner_etl/transformations/: __init__.py  bronze_district_health_raw.py  bronze_facilities_raw.py  bronze_pincode_directory_raw.py  gold_district_access_features.py  gold_facility_trust_index.py  silver_district_health_clean.py  silver_facilities_clean.py  silver_facilities_geocoded.py  silver_pincode_directory_clean.py
affordability-friction-planner/scaffold/: app-flow.md  data-sources.md  scoring.md
dhruvil-files/: GeoGap-Planner-Demo.pptx  project-scope.md  project-spec.md
(+25 files in other folders)
