[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "affordability-friction-planner-etl"
version = "0.1.0"
description = "Lakeflow pipeline for the affordability friction planner"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2,<3",
  "requests>=2.32,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
